# KnowledgeBase

./: .env.example  .gitignore  README.md  alembic.ini  entrypoint.sh  pyproject.toml
alembic/: env.py
alembic/migrations/: 2025_8_6_init_migration.py  2025_8_7_add_question_model.py
daemon/: knowledge.service
src/knowledge_base/: config.py  main.py
src/knowledge_base/application/: paginator.py  uow.py
src/knowledge_base/application/schemas/: pagination.py
src/knowledge_base/application/services/: category_queries.py  category_service.py  question_queries.py  question_service.py  source_queries.py  source_service.py  subcategory_queries.py  subcategory_service.py  task_queries.py  task_service.py
src/knowledge_base/domain/: errors.py
src/knowledge_base/domain/entities/: category.py  question.py  source.py  subcategory.py  task.py
src/knowledge_base/domain/repository/: category_repository.py  question_repository.py  source_repository.py  subcategory_repository.py  task_repository.py
src/knowledge_base/domain/services/: category_policy.py  subcategory_policy.py
src/knowledge_base/domain/value_objects/: id.py  link.py  title.py
src/knowledge_base/infrastructure/: paginator.py  uow.py
src/knowledge_base/infrastructure/db/: database.py
src/knowledge_base/infrastructure/db/orm/: category.py  question.py  source.py  subcategory.py  task.py
src/knowledge_base/infrastructure/repository/: sqlalchemy_category.py  sqlalchemy_question.py  sqlalchemy_source.py  sqlalchemy_subcategory.py  sqlalchemy_task.py
src/knowledge_base/interface/: dependencies.py
src/knowledge_base/interface/api/: __init__.py  handlers.py
src/knowledge_base/interface/api/routes/: category.py  subcategory.py
src/knowledge_base/interface/api/schemas/: category.py  pagination.py  question.py  source.py  subcategory.py  task.py  utils.py
src/knowledge_base/interface/routes/: category.py
src/knowledge_base/interface/schemas/: category.py  question.py  source.py  subcategory.py  task.py
